[sc-7718] Better wording on Check your email page

--- a/libs/user/src/assets/i18n/ca.json
+++ b/libs/user/src/assets/i18n/ca.json
@@ -5,14 +5,17 @@
 	"generic.or": "O",
 	"login.access_request": "vol accedir al teu compte de Nuclia i poder: ",
 	"login.boarding_title": "Embarcament a Nuclia",
-	"login.check_email": "Comprova el teu correu!",
-	"login.check_email_details": "Feu clic a l'enllaç que acabeu de rebre a <strong>{{ email }}</strong> per finalitzar el vostre compte. Si no hi ha res a la vista... Comproveu la vostra carpeta de correu brossa 🙃!",
+	"login.check_email.check_spams": "o comproveu la vostra carpeta de correu brossa.",
+	"login.check_email.details": "Feu clic a l'enllaç d'activació que us acabem d'enviar a <strong>{{ email }}</strong>. ",
+	"login.check_email.email_sent": "T’hem enviat un mail! :)",
+	"login.check_email.resend": "Reenviar",
+	"login.check_email.title": "Comproveu la vostra bústia de correu electrònic!",
 	"login.continue_with": "Inicieu sessió amb {{provider}}",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
+	"login.dont_see": "No ho veus?",
 	"login.email": "Correu electrònic",
 	"login.email_already_exists": "Ja existeix un usuari registrat amb aquest correu electrònic",
-	"login.email_sent": "T’hem enviat un mail! :)",
 	"login.email_signup": "Correu electrònic professional",
 	"login.email_signup_help": "Només es permeten les adreces de correu electrònic de l'empresa",
 	"login.error.auth_error": "Error d'autentificació.",
@@ -32,7 +35,6 @@
 	"login.password": "Contrasenya",
 	"login.recover": "Recuperar contrasenya",
 	"login.recover_help": "Problemes amb la paraula de pas?",
-	"login.resend_email": "Torna a enviar el correu electrònic",
 	"login.scope.kbs_read": "Accedir a les teves caixes de coneixement",
 	"login.scope.kbs_write": "Modificar les teves caixes de coneixement",
 	"login.sign-up-with": "Registra't amb {{provider}}",
@@ -41,7 +43,6 @@
 	"login.title": "Benvinguts a Nuclia",
 	"login.token_expired": "El testimoni ha caducat",
 	"login.try_again": "Torna-ho a intentar o recupera la contrasenya.",
-	"login.wrong_email": "Correu electrònic incorrecte?",
 	"onboarding.account_creation": "Creació del compte...",
 	"onboarding.company": "Per a quina empresa treballes?",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
