--- a/libs/user/src/assets/i18n/de.json
+++ b/libs/user/src/assets/i18n/de.json
@@ -5,14 +5,17 @@
 	"generic.or": "ODER",
 	"login.access_request": "möchte in Ihrem Namen auf Nuclia zugreifen und Folgendes tun können:",
 	"login.boarding_title": "Einsteigen in Nuclia",
-	"login.check_email": "Überprüfe deine Emails!",
-	"login.check_email_details": "Klicken Sie auf den Link, den Sie gerade unter <strong>{{ email }}</strong> erhalten haben, um Ihr Konto abzuschließen. Wenn nichts in Sicht ist… Überprüfen Sie Ihren Spam-Ordner 🙃!",
+	"login.check_email.check_spams": "oder schauen Sie in Ihrem Spam-Ordner nach.",
+	"login.check_email.details": "Klicken Sie auf den Aktivierungslink, den wir Ihnen gerade an <strong>{{ email }}</strong>gesendet haben. ",
+	"login.check_email.email_sent": "Wir haben Ihnen eine E-Mail geschickt!",
+	"login.check_email.resend": "Erneut senden",
+	"login.check_email.title": "Überprüfen Sie Ihren E-Mail-Posteingang!",
 	"login.continue_with": "Melden Sie sich mit {{provider}}an",
 	"login.create_one": "Erstellen",
 	"login.description": "Wissen Sie, was Ihr Unternehmen weiß",
+	"login.dont_see": "Siehst du es nicht?",
 	"login.email": "Email",
 	"login.email_already_exists": "Diese Emailadresse existiert bereits!",
-	"login.email_sent": "Wir haben Ihnen eine E-Mail geschickt!",
 	"login.email_signup": "Professionelle E-Mail",
 	"login.email_signup_help": "Nur Firmen-E-Mail-Adressen zulässig",
 	"login.error.auth_error": "Authentifizierungsfehler.",
@@ -32,7 +35,6 @@
 	"login.password": "Passwort",
 	"login.recover": "Passwort wiederherstellen",
 	"login.recover_help": "Probleme beim Einloggen?",
-	"login.resend_email": "Sende die E-Mail erneut",
 	"login.scope.kbs_read": "Sehen Sie sich Ihre Wissensboxen an",
 	"login.scope.kbs_write": "Ändern Sie Ihre Wissensboxen",
 	"login.sign-up-with": "Mit {{provider}} anmelden",
@@ -41,7 +43,6 @@
 	"login.title": "Willkommen in Nuclia",
 	"login.token_expired": "Token ist abgelaufen",
 	"login.try_again": "Bitte versuchen Sie es erneut oder setzen Sie Ihr Passwort unten zurück.",
-	"login.wrong_email": "Falsche E-mail?",
 	"onboarding.account_creation": "Konto-Erstellung…",
 	"onboarding.company": "Für welches Unternehmen arbeiten Sie?",
 	"onboarding.consent": "Durch die Nutzung dieses Produkts akzeptieren Sie die <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Allgemeinen Geschäftsbedingungen</a> und die <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Datenschutzerklärung</a>.",
