--- a/libs/user/src/assets/i18n/en.json
+++ b/libs/user/src/assets/i18n/en.json
@@ -5,14 +5,17 @@
 	"generic.or": "Or",
 	"login.access_request": "wants to access Nuclia on your behalf and be able to:",
 	"login.boarding_title": "Boarding Nuclia",
-	"login.check_email": "Check your emails!",
-	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
+	"login.check_email.check_spams": "or check your spam folder.",
+	"login.check_email.details": "Click on the activation link we just sent you at <strong>{{ email }}</strong>. ",
+	"login.check_email.email_sent": "We’ve sent you an email!",
+	"login.check_email.resend": "Resend",
+	"login.check_email.title": "Check your email inbox!",
 	"login.continue_with": "Log in with {{provider}}",
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
+	"login.dont_see": "Don’t see it?",
 	"login.email": "Email",
 	"login.email_already_exists": "This email address already exists! ",
-	"login.email_sent": "We’ve sent you an email!",
 	"login.email_signup": "Professional email",
 	"login.email_signup_help": "Only company email addresses allowed",
 	"login.error.auth_error": "Authentication error.",
@@ -32,7 +35,6 @@
 	"login.password": "Password",
 	"login.recover": "Recover password",
 	"login.recover_help": "Problems logging in?",
-	"login.resend_email": "Resend the email",
 	"login.scope.kbs_read": "View your Knowledge Boxes",
 	"login.scope.kbs_write": "Modify your Knowledge Boxes",
 	"login.sign-up-with": "Sign up with {{provider}}",
@@ -41,7 +43,6 @@
 	"login.title": "Welcome to Nuclia",
 	"login.token_expired": "Token has expired",
 	"login.try_again": "Please try again or reset your password below.",
-	"login.wrong_email": "Wrong email?",
 	"onboarding.account_creation": "Account creation…",
 	"onboarding.company": "What company are you working for?",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
