--- a/libs/user/src/assets/i18n/es.json
+++ b/libs/user/src/assets/i18n/es.json
@@ -5,14 +5,17 @@
 	"generic.or": "O",
 	"login.access_request": "quiere acceder a tu cuenta de Nuclia y poder: ",
 	"login.boarding_title": "Embarque Nuclia",
-	"login.check_email": "!Revisa tu correo!",
-	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
+	"login.check_email.check_spams": "o revisa tu carpeta de spam.",
+	"login.check_email.details": "Haga clic en el enlace de activación que le acabamos de enviar a <strong>{{ email }}</strong>.",
+	"login.check_email.email_sent": "Te hemos enviado un mail! :)",
+	"login.check_email.resend": "Reenviar",
+	"login.check_email.title": "¡Revisa tu bandeja de entrada de correo electrónico!",
 	"login.continue_with": "Inicie sesión con {{provider}}",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
+	"login.dont_see": "¿No lo ves?",
 	"login.email": "Correo electrónico",
 	"login.email_already_exists": "Ya existe un usuario registrado con este correo electrónico",
-	"login.email_sent": "Te hemos enviado un mail! :)",
 	"login.email_signup": "Correo electrónico profesional",
 	"login.email_signup_help": "Solo se permiten direcciones de correo electrónico de la empresa",
 	"login.error.auth_error": "Error de autenticación.",
@@ -32,7 +35,6 @@
 	"login.password": "Contraseña",
 	"login.recover": "Recuperar contraseña",
 	"login.recover_help": "Problemas con la contraseña?",
-	"login.resend_email": "Vuelva a enviar el correo electrónico",
 	"login.scope.kbs_read": "Acceder a tus cajas de conocimiento",
 	"login.scope.kbs_write": "Modificar tus cajas de conocimiento",
 	"login.sign-up-with": "Regístrese con {{provider}}",
@@ -41,7 +43,6 @@
 	"login.title": "Bienvenidos a Nuclia",
 	"login.token_expired": "El token ha caducado",
 	"login.try_again": "Vuelva a intentarlo o recupera la contraseña.",
-	"login.wrong_email": "Email incorrecto?",
 	"onboarding.account_creation": "Creación de cuenta…",
 	"onboarding.company": "¿Para qué empresa estás trabajando?",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
