--- a/libs/user/src/assets/i18n/fr.json
+++ b/libs/user/src/assets/i18n/fr.json
@@ -5,14 +5,17 @@
 	"generic.or": "Ou",
 	"login.access_request": "souhaite accéder à Nuclia en votre nom et être en mesure de :",
 	"login.boarding_title": "Embarquer avec Nuclia",
-	"login.check_email": "Vérifiez vos emails!",
-	"login.check_email_details": "Cliquez sur le lien que vous venez de recevoir à <strong>{{ email }}</strong> pour finaliser votre compte. Si vous ne voyez rien... Vérifiez votre dossier spam 🙃 !",
+	"login.check_email.check_spams": "ou vérifiez votre dossier spam.",
+	"login.check_email.details": "Cliquez sur le lien d'activation que nous venons de vous envoyer à <strong>{{ email }}</strong>. ",
+	"login.check_email.email_sent": "On vous a envoyé un email!",
+	"login.check_email.resend": "Renvoyer",
+	"login.check_email.title": "Vérifiez votre messagerie électronique !",
 	"login.continue_with": "Connexion avec {{provider}}",
 	"login.create_one": "Créer",
 	"login.description": "Savoir ce que votre entreprise sait",
+	"login.dont_see": "Vous ne le voyez pas ?",
 	"login.email": "Email",
 	"login.email_already_exists": "Cet email existe déjà!",
-	"login.email_sent": "On vous a envoyé un email!",
 	"login.email_signup": "Email professionnel",
 	"login.email_signup_help": "Seuls les emails d'entreprise sont autorisés",
 	"login.error.auth_error": "Erreur d'authentification.",
@@ -32,7 +35,6 @@
 	"login.password": "Mot de passe",
 	"login.recover": "Récupérer mon mot de passe",
 	"login.recover_help": "Problèmes de connexion ?",
-	"login.resend_email": "Renvoyer l'email",
 	"login.scope.kbs_read": "Consulter vos boîtes à savoir",
 	"login.scope.kbs_write": "Modifier vos Boîtes à savoir",
 	"login.sign-up-with": "S'inscrire avec {{provider}}",
@@ -41,7 +43,6 @@
 	"login.title": "Bienvenue à Nuclia",
 	"login.token_expired": "Le jeton a expiré",
 	"login.try_again": "Veuillez réessayer ou réinitialiser votre mot de passe ci-dessous.",
-	"login.wrong_email": "Email incorrect ?",
 	"onboarding.account_creation": "Création du compte...",
 	"onboarding.company": "Pour quelle entreprise travaillez-vous ?",
 	"onboarding.consent": "En utilisant ce produit, vous acceptez les <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">termes et conditions</a> et <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">politique de confidentialité</a>.",
