--- a/libs/user/src/assets/i18n/pt.json
+++ b/libs/user/src/assets/i18n/pt.json
@@ -5,14 +5,17 @@
 	"generic.or": "Ou",
 	"login.access_request": "deseja acessar a Nuclia em seu nome e ser capaz de:",
 	"login.boarding_title": "Embarque Núclia",
-	"login.check_email": "Verifique seus e-mails!",
-	"login.check_email_details": "Clique no link que você acabou de receber em <strong>{{ email }}</strong> para finalizar sua conta. Se não houver nada à vista… Verifique sua pasta de spam 🙃!",
+	"login.check_email.check_spams": "ou verifique sua pasta de spam.",
+	"login.check_email.details": "Clique no link de ativação que acabamos de enviar para você em <strong>{{ email }}</strong>. ",
+	"login.check_email.email_sent": "Enviamos um e-mail para você!",
+	"login.check_email.resend": "Reenviar",
+	"login.check_email.title": "Verifique sua caixa de entrada de e-mail!",
 	"login.continue_with": "Faça login com {{provider}}",
 	"login.create_one": "Crio",
 	"login.description": "Saiba o que sua empresa sabe",
+	"login.dont_see": "Não vê isso?",
 	"login.email": "O email",
 	"login.email_already_exists": "Esse endereço de email já existe!",
-	"login.email_sent": "Enviamos um e-mail para você!",
 	"login.email_signup": "E-mail profissional",
 	"login.email_signup_help": "Somente endereços de e-mail corporativos são permitidos",
 	"login.error.auth_error": "Erro de autenticação.",
@@ -32,7 +35,6 @@
 	"login.password": "Senha",
 	"login.recover": "Recuperar Senha",
 	"login.recover_help": "Problemas para fazer login?",
-	"login.resend_email": "Reenvie o e-mail",
 	"login.scope.kbs_read": "Veja suas caixas de conhecimento",
 	"login.scope.kbs_write": "Modifique suas caixas de conhecimento",
 	"login.sign-up-with": "Inscreva-se com {{provider}}",
@@ -41,7 +43,6 @@
 	"login.title": "Bem-vindo à Nuclia",
 	"login.token_expired": "O token expirou",
 	"login.try_again": "Tente novamente ou redefina sua senha abaixo.",
-	"login.wrong_email": "E-mail errado?",
 	"onboarding.account_creation": "Criação de conta…",
 	"onboarding.company": "Para qual empresa você trabalha?",
 	"onboarding.consent": "Ao usar este produto, você aceita os <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termos e Condições</a> e a <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de Privacidade</a>.",
