--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -778,6 +778,8 @@
 	"stash.view_edit_service_access": "View / Edit existing API keys",
 	"stash.widgets.answers.help": "Generate a response to the user's questions and allow to chat with the system",
 	"stash.widgets.answers.label": "Answer generation",
+	"stash.widgets.autocompleteFromNERs.help": "Suggest NERs to autocomplete the search query",
+	"stash.widgets.autocompleteFromNERs.label": "Autocomplete from NERs",
 	"stash.widgets.autofilter.help": "Detects entities mentioned in the user query and turns them automatically into filters.",
 	"stash.widgets.autofilter.label": "Automatic filtering",
 	"stash.widgets.configuration": "Widget configuration",
@@ -823,8 +825,6 @@
 	"stash.widgets.relations.help": "Displays information about related entities in the search results",
 	"stash.widgets.relations.label": "Relations",
 	"stash.widgets.snippet": "Code snippet",
-	"stash.widgets.suggestEntities.help": "Suggest entities while typing search query",
-	"stash.widgets.suggestEntities.label": "Suggest entities",
 	"stash.widgets.suggestions.help": "Suggest results while typing search query",
 	"stash.widgets.suggestions.label": "Suggestions",
 	"stash.widgets.suggestLabels.help": "When label search intent training has been done, displays labels suggested based on the query",
