--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -778,6 +778,8 @@
 	"stash.view_edit_service_access": "Afficher/Modifier les clés API existantes",
 	"stash.widgets.answers.help": "Générer une réponse aux questions de l'utilisateur et permettre de discuter avec le système",
 	"stash.widgets.answers.label": "Génération de réponses",
+	"stash.widgets.autocompleteFromNERs.help": "Suggérer des NERs pour compléter automatiquement la requête de recherche",
+	"stash.widgets.autocompleteFromNERs.label": "Saisie semi-automatique à partir des NER",
 	"stash.widgets.autofilter.help": "Détecte les entités mentionnées dans la requête de l'utilisateur et les transforme automatiquement en filtres.",
 	"stash.widgets.autofilter.label": "Filtrage automatique",
 	"stash.widgets.configuration": "Configuration du widget",
@@ -823,8 +825,6 @@
 	"stash.widgets.relations.help": "Affiche des informations sur les entités associées dans les résultats de recherche",
 	"stash.widgets.relations.label": "Rapports",
 	"stash.widgets.snippet": "Extrait de code",
-	"stash.widgets.suggestEntities.help": "Suggérer des entités lors de la saisie d'une requête de recherche",
-	"stash.widgets.suggestEntities.label": "Proposer des entités",
 	"stash.widgets.suggestions.help": "Suggérer des résultats lors de la saisie d'une requête de recherche",
 	"stash.widgets.suggestions.label": "Suggestions",
 	"stash.widgets.suggestLabels.help": "Une fois la formation sur l'intention de recherche d'étiquettes effectuée, affiche les étiquettes suggérées en fonction de la requête.",
