--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -778,6 +778,8 @@
 	"stash.view_edit_service_access": "Visualizar/editar chaves de API existentes",
 	"stash.widgets.answers.help": "Gere uma resposta às dúvidas do usuário e permita conversar com o sistema",
 	"stash.widgets.answers.label": "Geração de resposta",
+	"stash.widgets.autocompleteFromNERs.help": "Sugira NERs para preencher automaticamente a consulta de pesquisa",
+	"stash.widgets.autocompleteFromNERs.label": "Preenchimento automático de NERs",
 	"stash.widgets.autofilter.help": "Detecta entidades mencionadas na consulta do usuário e as transforma automaticamente em filtros.",
 	"stash.widgets.autofilter.label": "Filtragem automática",
 	"stash.widgets.configuration": "Configuração de widget",
@@ -823,8 +825,6 @@
 	"stash.widgets.relations.help": "Exibe informações sobre entidades relacionadas nos resultados da pesquisa",
 	"stash.widgets.relations.label": "Relações",
 	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestEntities.help": "Sugerir entidades ao digitar a consulta de pesquisa",
-	"stash.widgets.suggestEntities.label": "Sugerir entidades",
 	"stash.widgets.suggestions.help": "Sugira resultados ao digitar a consulta de pesquisa",
 	"stash.widgets.suggestions.label": "Sugestões",
 	"stash.widgets.suggestLabels.help": "Quando o treinamento de intenção de pesquisa de rótulo for concluído, exibirá rótulos sugeridos com base na consulta",
