Update de widget generator accordingly

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -813,6 +813,9 @@
 	"stash.widgets.permalink.help": "Afegiu paràmetres addicionals a l'URL que permet l'obertura directa d'un recurs o dels resultats d'una cerca",
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Placeholder de la barra de cerca",
+	"stash.widgets.preselected-filters.help": "Aquests filtres s'aplicaran a qualsevol consulta de cerca sense ser visibles per als usuaris finals.",
+	"stash.widgets.preselected-filters.label": "Filtres preseleccionats",
+	"stash.widgets.preselected-filters.placeholder": "Un filtre per línia",
 	"stash.widgets.preview": "Vista prèvia",
 	"stash.widgets.prompt.help": "Tindrà prioritat a el prompt de l'usuari definida a la configuració del Knowledge Box. Nota: l'estratègia del prompt pot canviar en funció del model generatiu. Comproveu els exemples a la pàgina de configuració.",
 	"stash.widgets.prompt.label": "Prompt de l'usuari",
