--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -814,6 +814,9 @@
 	"stash.widgets.permalink.help": "Fügen Sie der URL zusätzliche Parameter hinzu, um das direkte Öffnen einer Ressource oder von Suchergebnissen zu ermöglichen",
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Platzhalter für die Suchleiste",
+	"stash.widgets.preselected-filters.help": "Diese Filter werden auf alle Suchanfragen angewendet, ohne dass sie für den Endbenutzer sichtbar sind.",
+	"stash.widgets.preselected-filters.label": "Vorgewählte Filter",
+	"stash.widgets.preselected-filters.placeholder": "Ein Filter pro Zeile",
 	"stash.widgets.preview": "Vorschau",
 	"stash.widgets.prompt.help": "Sie hat Vorrang vor der in den Knowledge Box-Einstellungen definierten Benutzeraufforderung. Hinweis: Die Eingabeaufforderungsstrategie kann sich je nach generativem Modell ändern. Sehen Sie sich die Beispiele auf der Einstellungsseite an.",
 	"stash.widgets.prompt.label": "Benutzer prompt",
