--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -814,6 +814,9 @@
 	"stash.widgets.permalink.help": "Add extra parameters in URL allowing direct opening of a resource or search results",
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Search bar placeholder",
+	"stash.widgets.preselected-filters.help": "These filters will be applied to any search queries without being visible to the end users.",
+	"stash.widgets.preselected-filters.label": "Preselected filters",
+	"stash.widgets.preselected-filters.placeholder": "One filter by line",
 	"stash.widgets.preview": "Preview",
 	"stash.widgets.prompt.help": "It will take precedence on the user prompt defined in the Knowledge Box settings. Note: the prompt strategy might change depending on the generative model. Check the examples in the settings page.",
 	"stash.widgets.prompt.label": "User prompt",
