--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -813,6 +813,9 @@
 	"stash.widgets.permalink.help": "Agregue parámetros adicionales en la URL que permita la apertura directa de un recurso o de los resultados de una búsqueda",
 	"stash.widgets.permalink.label": "Permalinks",
 	"stash.widgets.placeholder": "Placeholder de la barra de búsqueda",
+	"stash.widgets.preselected-filters.help": "Estos filtros se aplicarán a cualquier consulta de búsqueda sin ser visibles para los usuarios finales.",
+	"stash.widgets.preselected-filters.label": "Filtros preseleccionados",
+	"stash.widgets.preselected-filters.placeholder": "Un filtro por línea",
 	"stash.widgets.preview": "Previsualizar",
 	"stash.widgets.prompt.help": "Tendrá prioridad en el prompt de usuario definido en la configuración del Knowledge Box. Nota: la estrategia de prompt puede cambiar según el modelo generativo. Consulte los ejemplos en la página de configuración.",
 	"stash.widgets.prompt.label": "Prompt de usuario",
