--- a/libs/common/src/assets/i18n/fr.json
+++ b/libs/common/src/assets/i18n/fr.json
@@ -814,6 +814,9 @@
 	"stash.widgets.permalink.help": "Ajouter des paramètres supplémentaires dans l'URL permettant l'ouverture directe d'une ressource ou des résultats de recherche",
 	"stash.widgets.permalink.label": "Liens permanents",
 	"stash.widgets.placeholder": "Espace réservé dans la barre de recherche",
+	"stash.widgets.preselected-filters.help": "Ces filtres seront appliqués à toutes les requêtes de recherche sans être visibles pour les utilisateurs finaux.",
+	"stash.widgets.preselected-filters.label": "Filtres présélectionnés",
+	"stash.widgets.preselected-filters.placeholder": "Un filtre par ligne",
 	"stash.widgets.preview": "Aperçu",
 	"stash.widgets.prompt.help": "Il aura priorité sur le prompt utilisateur définie dans les paramètres de la Knowledge Box. Remarque : la stratégie de prompt peut changer en fonction du modèle génératif. Vérifiez les exemples dans la page des paramètres.",
 	"stash.widgets.prompt.label": "Prompt utilisateur",
