--- a/libs/common/src/assets/i18n/pt.json
+++ b/libs/common/src/assets/i18n/pt.json
@@ -814,6 +814,9 @@
 	"stash.widgets.permalink.help": "Adicione parâmetros extras no URL permitindo a abertura direta de um recurso ou resultados de pesquisa",
 	"stash.widgets.permalink.label": "Links permanentes",
 	"stash.widgets.placeholder": "Espaço reservado da barra de pesquisa",
+	"stash.widgets.preselected-filters.help": "Esses filtros serão aplicados a qualquer consulta de pesquisa sem serem visíveis para os usuários finais.",
+	"stash.widgets.preselected-filters.label": "Filtros pré-selecionados",
+	"stash.widgets.preselected-filters.placeholder": "Um filtro por linha",
 	"stash.widgets.preview": "Visualizar",
 	"stash.widgets.prompt.help": "Terá precedência no prompt do usuário definido nas configurações da Caixa de conhecimento. Nota: a estratégia imediata pode mudar dependendo do modelo generativo. Verifique os exemplos na página de configurações.",
 	"stash.widgets.prompt.label": "Prompt do usuário",
