[sc-7651] Use NER suggestions for autocompletion (#1138)
* Rename feature

* Make chip component focusable

* Use NER suggestions for autocompletion

* Fix format

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -777,6 +777,8 @@
 	"stash.view_edit_service_access": "Visualitza / edita les claus de l'API existents",
 	"stash.widgets.answers.help": "Genera resposta a les preguntes dels usuaris i permet xatejar amb el sistema",
 	"stash.widgets.answers.label": "Generació de respostes",
+	"stash.widgets.autocompleteFromNERs.help": "Suggereix NERs per autocompletar la consulta de cerca",
+	"stash.widgets.autocompleteFromNERs.label": "Autocompletar des de NERs",
 	"stash.widgets.autofilter.help": "Detecta les entitats mencionades a la consulta de l'usuari i les converteix automàticament en filtres",
 	"stash.widgets.autofilter.label": "Filtrat automàtic",
 	"stash.widgets.configuration": "Configuració del widget",
@@ -825,8 +827,6 @@
 	"stash.widgets.relations.help": "Mostra informació de les entitats relacionades en els resultats de cerca",
 	"stash.widgets.relations.label": "Relacions",
 	"stash.widgets.snippet": "Fragment de codi",
-	"stash.widgets.suggestEntities.help": "Suggerir entitats mentre s'escriu la consulta de cerca",
-	"stash.widgets.suggestEntities.label": "Suggereix entitats",
 	"stash.widgets.suggestions.help": "Suggereix resultats mentre escriviu la consulta de cerca",
 	"stash.widgets.suggestions.label": "Suggeriments",
 	"stash.widgets.suggestLabels.help": "Quan s'ha realitzat l'entrenament de la intenció de cerca d'etiquetes, es mostren les etiquetes suggerides en funció de la consulta",
