--- a/libs/common/src/assets/i18n/de.json
+++ b/libs/common/src/assets/i18n/de.json
@@ -778,6 +778,8 @@
 	"stash.view_edit_service_access": "Vorhandene API-Schlüssel anzeigen/bearbeiten",
 	"stash.widgets.answers.help": "Generieren Sie eine Antwort auf die Fragen des Benutzers und ermöglichen Sie den Chat mit dem System",
 	"stash.widgets.answers.label": "Antwortgenerierung",
+	"stash.widgets.autocompleteFromNERs.help": "Schlagen Sie NERs vor, um die Suchabfrage automatisch zu vervollständigen",
+	"stash.widgets.autocompleteFromNERs.label": "Autovervollständigung von NERs",
 	"stash.widgets.autofilter.help": "Erkennt in der Benutzerabfrage erwähnte Entitäten und wandelt sie automatisch in Filter um.",
 	"stash.widgets.autofilter.label": "Automatische Filterung",
 	"stash.widgets.configuration": "Widget-Konfiguration",
@@ -826,8 +828,6 @@
 	"stash.widgets.relations.help": "Zeigt Informationen zu verwandten Entitäten in den Suchergebnissen an",
 	"stash.widgets.relations.label": "Beziehungen",
 	"stash.widgets.snippet": "CODE-AUSZUG",
-	"stash.widgets.suggestEntities.help": "Schlagen Sie Entitäten vor, während Sie eine Suchanfrage eingeben",
-	"stash.widgets.suggestEntities.label": "Entitäten vorschlagen",
 	"stash.widgets.suggestions.help": "Schlagen Sie Ergebnisse vor, während Sie eine Suchanfrage eingeben",
 	"stash.widgets.suggestions.label": "Vorschläge",
 	"stash.widgets.suggestLabels.help": "Wenn das Training der Etikettensuchabsicht durchgeführt wurde, werden die auf der Grundlage der Abfrage vorgeschlagenen Etiketten angezeigt",
