--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -777,6 +777,8 @@
 	"stash.view_edit_service_access": "Ver/Editar claves API existentes",
 	"stash.widgets.answers.help": "Generar respuesta a las preguntas de los usuarios y permitir chatear con el sistema",
 	"stash.widgets.answers.label": "Generación de respuesta",
+	"stash.widgets.autocompleteFromNERs.help": "Sugerir NER para autocompletar la consulta de búsqueda",
+	"stash.widgets.autocompleteFromNERs.label": "Autocompletar desde NER",
 	"stash.widgets.autofilter.help": "Detacta las entidades mencionadas en la consulta del usuario y las convierte automáticamente en filtros",
 	"stash.widgets.autofilter.label": "Filtrado automático",
 	"stash.widgets.configuration": "Configuracion de Widget",
@@ -825,8 +827,6 @@
 	"stash.widgets.relations.help": "Muestra información de las entidades relacionadas en los resultados de búsqueda.",
 	"stash.widgets.relations.label": "Relaciones",
 	"stash.widgets.snippet": "Fragmento de código",
-	"stash.widgets.suggestEntities.help": "Sugerir resultados mientras se escribe la consulta de búsqueda",
-	"stash.widgets.suggestEntities.label": "Sugerir entidades",
 	"stash.widgets.suggestions.help": "Sugerir resultados mientras escribe la consulta de búsqueda",
 	"stash.widgets.suggestions.label": "Sugerencias",
 	"stash.widgets.suggestLabels.help": "Cuando se ha realizado el entrenamiento de la intención de búsqueda de etiquetas, muestra las etiquetas sugeridas en función de la consulta",
